--- a/css/style..css
+++ b/css/style..css
@@ -1,5 +1,5 @@
-#img{
-padding-top: 2%;
+#img {
+  padding-top: 2%;
 }
 .intro {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -16,31 +16,33 @@ padding-top: 2%;
 h1 {
   padding-top: 25%;
 }
-.pizzalist{
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding-top: 20%;
-    
+.pizzalist {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 20%;
 }
-#pizzatype,#toppings,#pizzacrust,#pizzasize,#delivery{
-    font-size: x-large;
-    
+#pizzatype,
+#toppings,
+#pizzacrust,
+#pizzasize,
+#delivery {
+  font-size: x-large;
 }
-#quantity{
-    font-size: large;
+#quantity {
+  font-size: large;
 }
-#btn{
-    height: 100px;
-    width: 200px;
-    font-size: xx-large;
-    font-weight: bolder;
-    font-style: italic;
-    position: relative;
+#btn {
+  height: 100px;
+  width: 200px;
+  font-size: xx-large;
+  font-weight: bolder;
+  font-style: italic;
+  position: relative;
 }
-.customer{
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 55%;
+.customer {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 55%;
 }
